refactor to Grow, Strains, and Media model

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       - ./backend/.env
     volumes:
       - ./backend:/backend
+    # command: procrastinate --app=backend.services.queue.procrastinate_app schema --apply
     depends_on:
       - postgres
 
