--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,16 @@
   },
   "dependencies": {
     "apexcharts": "^3.36.3",
-    "autoprefixer": "^10.4.13",
     "axios": "^1.2.3",
     "dayjs": "^1.11.7",
     "pinia": "^2.0.28",
-    "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4",
+    "stylus-loader": "^7.1.0",
     "vue": "^3.2.45",
     "vue-final-modal": "^3.4.11",
     "vue-router": "^4.1.6",
     "vue-sidebar-menu": "^5.2.5",
-    "vue3-apexcharts": "^1.4.1"
+    "vue3-apexcharts": "^1.4.1",
+    "vuetify": "^3.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
